CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# Compiler
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(LIBRARY_NAME "g2o")
SET(SOURCES "src/g2o.cpp")

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake_modules)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})

IF(APPLE)
    SET(CMAKE_SHARED_LIBRARY_SUFFIX ".so")
    SET(CMAKE_MACOSX_RPATH ON)
ENDIF(APPLE)

FIND_PACKAGE(Boost REQUIRED COMPONENTS python3)
FIND_PACKAGE(PythonLibs REQUIRED)
FIND_PACKAGE(g2o REQUIRED)
FIND_PACKAGE(Eigen3 REQUIRED)

ADD_LIBRARY(${LIBRARY_NAME} SHARED ${SOURCES})
SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES PREFIX "")

INCLUDE_DIRECTORIES(
    ${G2O_INCLUDE_DIR}
    ${EIGEN3_INCLUDE_DIR}
    ${Boost_INCLUDE_DIRS}
    ${PYTHON_INCLUDE_DIRS}
)

target_link_libraries(${LIBRARY_NAME}
    ${G2O_CORE_LIBRARY}
    ${Boost_LIBRARIES}
    ${PYTHON_LIBRARIES}
)